--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                 <span> Prakruthi B</span>
             </div>
             <div class="links">
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#">Home</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#">About</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"><a href="#">Skills</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#">Projects</a></div>
-                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#">Certifications</a></div>
-                <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"><a href="#">Contacts</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#home">Home</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"><a href="#about">About</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"><a href="#skills">Skills</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400"><a href="#projects">Projects</a></div>
+                <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500"><a href="#certifications">Certifications</a></div>
+                <div class="link contact-btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="600"><a href="#contact">Contacts</a></div>
             </div>
             <i class="fa-solid fa-bars hamburg" onclick="hamburg()"></i>
         </div>
@@ -36,7 +36,7 @@
             </div>
         </div>
     </nav>    
-        <section>
+        <section id="home">
             <div class="main-container">
                 <div class="image" data-aos="zoom-in-right" data-aos-duration="2500">
                     <img src="me.jpg" alt="">
@@ -52,7 +52,9 @@
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-duration="1300">
-                        <button>Download CV</button>
+                        <a href="Prakruthi_Resume.pdf" download>
+                            <button>Download CV</button>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -73,5 +75,36 @@
                 navbar.style.transform="translateY(-50px)"
             }
         </script>
+        <section id="about" class="info-section">
+            <h2>About Me</h2>
+            <p>
+                I am a passionate and motivated developer with a strong interest in building modern, responsive, and user-friendly websites. I enjoy learning new technologies and improving my skills continuously.
+            </p>
+        </section>
+        <section id="skills" class="info-section">
+            <h2>Skills</h2>
+            <ul class="skill-list">
+                <li>HTML & CSS</li>
+                <li>JavaScript</li>
+                <li>Java Programming</li>
+                <li>Web Development</li>
+                <li>Python Programming</li>
+            </ul>
+        </section>
+        <section id="projects" class="info-section">
+            <h2>Projects</h2>
+            <div class="project-box">
+                <h3>Personal Portfolio Website</h3>
+                <p>A responsive portfolio built using HTML and CSS.</p>
+            </div>
+        </section>
+        <section id="contact" class="info-section">
+            <h2>Contact</h2>
+            <p>Email: bprakruthi05@email.com</p>
+            <p>Phone: +91-9916642204</p>
+        </section>
+        <footer>
+            <p>© 2025 Prakruthi. All rights reserved.</p>
+        </footer>
 </body>
 </html>
