--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
                 <p>A responsive portfolio built using HTML and CSS.</p>
             </div>
         </section>
+        <section id="certifications" class="info-section">
+            <h2>Certifications</h2>
+            <div class="certifications-box">
+                <h3>AI training program by IBM-ICT</h3>
+            </div>
+            <div class="certifications-box">
+                <h4>Java Full Stack Development by QSpiders</h4>
+            </div>
+        </section>
         <section id="contact" class="info-section">
             <h2>Contact</h2>
             <p>Email: bprakruthi05@email.com</p>
@@ -108,4 +117,5 @@
         </footer>
 </body>
 </html>
+
 
