--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </section>
         <section id="contact" class="info-section">
             <h2>Contact</h2>
-            <p>Email: bprakruthi05@email.com</p>
+            <p>Email: bprakruthi05@gmail.com</p>
             <p>Phone: +91-9916642204</p>
         </section>
         <footer>
@@ -117,5 +117,6 @@
         </footer>
 </body>
 </html>
+
 
 
