--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <div class="typewriter" data-aos="fade-right" data-aos-duration="1000" data-aos-duration="900">I'm a<span></span></div>
                     <p data-aos="flip-up" data-aos-duration="1000" data-aos-duration="1100">I am a passionate Frontend Developer, Web Developer, and Data Analyst who enjoys creating meaningful digital solutions. I love transforming ideas into visually appealing, responsive, and user-friendly websites. With a strong focus on clean design and smooth functionality, I strive to deliver high-quality web experiences. I am a quick learner, always exploring new technologies and improving my skills. My goal is to contribute to innovative projects and build a successful career in the tech industry.</p>
                     <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-duration="1200">
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                        <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://github.com/Prakruthi0509"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://wa.me/919916642204"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a href="https://www.linkedin.com/in/bprakruthi/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/_dazzling._.soul_05_/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-duration="1300">
                         <a href="Prakruthi_Resume.pdf" download>
@@ -117,6 +117,7 @@
         </footer>
 </body>
 </html>
+
 
 
 
