--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <a href="https://www.instagram.com/_dazzling._.soul_05_/"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                     <div class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-duration="1300">
-                        <a href="Prakruthi_Resume.pdf" download>
+                        <a href="./Prakruthi_Resume.pdf" tagret="_blank">
                             <button>Download CV</button>
                         </a>
                     </div>
@@ -117,6 +117,7 @@
         </footer>
 </body>
 </html>
+
 
 
 
