--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="content">
                     <h1 data-aos="fade-left" data-aos-duration="1000" data-aos-duration="800"> Hey I'm <span>Prakruthi</span></h1>
                     <div class="typewriter" data-aos="fade-right" data-aos-duration="1000" data-aos-duration="900">I'm a<span></span></div>
-                    <p data-aos="flip-up" data-aos-duration="1000" data-aos-duration="1100">I am a passionate Frontend Developer, Web Developer, and Data Analyst who enjoys creating meaningful digital solutions. I love transforming ideas into visually appealing, responsive, and user-friendly websites. With a strong focus on clean design and smooth functionality, I strive to deliver high-quality web experiences. I am a quick learner, always exploring new technologies and improving my skills. My goal is to contribute to innovative projects and build a successful career in the tech industry.</p>
+                    <p data-aos="flip-up" data-aos-duration="1000" data-aos-duration="1100">I am a passionate and motivated Frontend Developer, Web Developer, and Data Analyst with a strong interest in building modern, responsive, and user-friendly websites. I enjoy learning new technologies and improving my skills continuously.</p>
                     <div class="social-links" data-aos="flip-down" data-aos-duration="1000" data-aos-duration="1200">
                         <a href="https://github.com/Prakruthi0509"><i class="fa-brands fa-github"></i></a>
                         <a href="https://wa.me/919916642204"><i class="fa-brands fa-whatsapp"></i></a>
@@ -78,7 +78,7 @@
         <section id="about" class="info-section">
             <h2>About Me</h2>
             <p>
-                I am a passionate and motivated developer with a strong interest in building modern, responsive, and user-friendly websites. I enjoy learning new technologies and improving my skills continuously.
+                I am a passionate Frontend Developer, Web Developer, and Data Analyst who enjoys creating meaningful digital solutions. I love transforming ideas into visually appealing, responsive, and user-friendly websites. With a strong focus on clean design and smooth functionality, I strive to deliver high-quality web experiences. I am a quick learner, always exploring new technologies and improving my skills. My goal is to contribute to innovative projects and build a successful career in the tech industry.
             </p>
         </section>
         <section id="skills" class="info-section">
@@ -117,6 +117,7 @@
         </footer>
 </body>
 </html>
+
 
 
 
