--- a/index.html
+++ b/index.html
@@ -93,9 +93,15 @@
         </section>
         <section id="projects" class="info-section">
             <h2>Projects</h2>
-            <div class="project-box">
+                <div class="project-box">
                 <h3>Personal Portfolio Website</h3>
                 <p>A responsive portfolio built using HTML and CSS.</p>
+                <a href="https://prakruthi0509.github.io/portfolio" class="resume-btn" target="_blank">View Project</a>
+            </div>
+            <div class="project-box">
+                <h3>Calculator App</h3>
+                <p>A modern calculator web app with dark and light mode, built using HTML, CSS, and JavaScript for smooth and responsive performance.</p>
+                <a href="https://prakruthi0509.github.io/Calculator" class="resume-btn" target="_blank">View Project</a>
             </div>
         </section>
         <section id="certifications" class="info-section">
@@ -124,6 +130,7 @@
         </script>
 </body>
 </html>
+
 
 
 
