--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
                 <a href="https://prakruthi0509.github.io/portfolio" class="resume-btn" target="_blank">View Project</a>
             </div>
             <div class="project-box">
+                <h3>Website Landing Page</h3>
+                <p><p>A simple and responsive restaurant landing page created using HTML and CSS to showcase the menu, ambiance, and contact details.</p>
+                <a href="https://prakruthi0509.github.io/Landing-Page/" class="resume-btn" target="_blank">View Project</a>
+            </div>
+            <div class="project-box">
                 <h3>Calculator App</h3>
                 <p>A modern calculator web app with dark and light mode, built using HTML, CSS, and JavaScript for smooth and responsive performance.</p>
                 <a href="https://prakruthi0509.github.io/Calculator" class="resume-btn" target="_blank">View Project</a>
@@ -130,6 +135,7 @@
         </script>
 </body>
 </html>
+
 
 
 
